frontend/src/pages/Platform/Platform.module.scss
 
.platformContainer {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  font-size: 30px;
}

.platformContainer h1 {
  font-size: 40px;
  opacity: 0.8;
  color: black;
}

.platform {
  cursor: pointer;
  padding: 20px 10px;  
  height: 350px;
  width: 200px;
  margin: 20px;
  background-color: #fff;
  color: rgb(69, 69, 69);
  border-radius: 10px;
  flex: 1;  
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  transition: box-shadow 0.3s, color 0.3s;  
}

.selected {
  box-shadow: 0 0 8px 2px rgba(0, 0, 0, 0.05);
}

.header {
  display: flex;
  align-self: flex-start;
  font-size: 30px;
}

.icon {
  font-size: 60px;  
  display: flex;
  align-items: center;
  margin-bottom: 20px;
  justify-content: center;
}

.platformText {
  font-weight: 600;
}

 
.facebookColor {
  color: #4267b2;  
}

.twitterColor {
  color: #1da1f2;  
}

.redditColor {
  color: #ff5700;  
}

.snapchatColor {
  color: #fffc00;  
}

.tiktokColor {
  color: #000000;  
}

.linkedinColor {
  color: #0077b5;  
}

.icon,
.platformText {
  transition: opacity 0.3s ease;  
}

.platformTextWrapper {
  position: relative;
  display: inline-block;
}

.instagramGradientText {
  position: absolute;
  top: 0;
  left: 0;
  background: linear-gradient(
    45deg,
    #f09433,
    #e6683c,
    #dc2743,
    #cc2366,
    #bc1888
  );
  -webkit-background-clip: text;
  color: transparent; /* Hide the text color to show the gradient */
  background-clip: text;
  opacity: 0; /* Start invisible and transition to visible */
  transition: opacity 0.3s ease-out;
}

